--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@legendapp/motion": "^2.2.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.3",
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
@@ -22,7 +23,8 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
