--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
     "expo": "~48.0.5",
+    "expo-camera": "~13.2.1",
+    "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
     "react-native": "0.71.3",
@@ -26,13 +28,12 @@
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "react-redux": "^8.0.5",
-    "expo-camera": "~13.2.1"
+    "react-redux": "^8.0.5"
   },
   "peerDependencies": {
+    "@babel/core": "^7.20.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@babel/core": "^7.20.0"
+    "react-dom": "18.2.0"
   },
   "private": true
 }
