--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "uuid": "^9.0.0"
   },
   "peerDependencies": {
     "@babel/core": "^7.20.0",
