--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@reduxjs/toolkit": "^1.9.3",
     "expo": "~48.0.5",
     "expo-camera": "~13.2.1",
+    "expo-google-app-auth": "^10.0.0",
     "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
+    "faker": "^6.6.6",
     "firebase": "^9.17.2",
     "react-native": "0.71.3",
     "react-native-dotenv": "^3.4.8",
     "react-native-paper": "^5.2.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-select-dropdown": "^3.3.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
