--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "expo": "~48.0.5",
     "expo-camera": "~13.2.1",
     "expo-google-app-auth": "^10.0.0",
