--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@legendapp/motion": "^2.2.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -25,6 +26,7 @@
     "expo-status-bar": "~1.4.4",
     "faker": "^6.6.6",
     "firebase": "^9.17.2",
+    "jwt-decode": "^3.1.2",
     "react-native": "0.71.3",
     "react-native-dotenv": "^3.4.8",
     "react-native-paper": "^5.2.0",
