--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "faker": "^6.6.6",
     "firebase": "^9.17.2",
     "jwt-decode": "^3.1.2",
+    "react-moment": "^1.1.3",
     "react-native": "0.71.3",
     "react-native-dotenv": "^3.4.8",
     "react-native-paper": "^5.2.0",
