--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jwt-decode": "^3.1.2",
     "react-moment": "^1.1.3",
     "react-native": "0.71.3",
+    "react-native-cloudinary": "^1.0.1",
     "react-native-dotenv": "^3.4.8",
     "react-native-paper": "^5.2.0",
     "react-native-picker-select": "^8.0.4",
