--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-redux": "^8.0.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "expo-updates": "~0.16.3"
   },
   "peerDependencies": {
     "@babel/core": "^7.20.0",
